# pappap-ai-chain-snn

./: Cargo.toml  index.html
src/: bus.rs  chain.rs  config.rs  crypto.rs  crypto_pqc.rs  libp2p_p2p.rs  libp2p_swarm.rs  main.rs  message.rs  snn_core.rs  voice.rs  wallet_mobile.rs
src/managers/: consensus_engine.rs  mod.rs  p2p_manager.rs  security_manager.rs  storage_manager.rs  transaction_manager.rs
