[package]
name = "pappap-ai-chain-snn"
version = "0.2.0"
edition = "2021"
description = "World's First Real SNN-Native Blockchain – 2025 Edition"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
actix-web = "4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "websocket"] }
rand = "0.8"
rand_chacha = "0.3"
aes-gcm = "0.10"
zeroize = "1.8"
config = "0.14"
thiserror = "1.0"
futures = "0.3"
once_cell = "1.19"
hex = "0.4"
chrono = "0.4"

[features]
high-neuron-mode = []