[package]
name = "pappap-ai-chain-snn"
version = "0.2.0"
edition = "2021"
description = "World's First Real Spiking Neural Network Blockchain – Made in Vietnam"
license = "MIT"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
actix-web = "4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rand = "0.8"
rand_chacha = "0.3"
aes-gcm = "0.10"
zeroize = "1.8"
chrono = "0.4"
num_cpus = "1.16"
sys-info = "0.9"

[features]
high-neuron-mode = []
